--- a/.github/workflows/generate-snake.yml
+++ b/.github/workflows/generate-snake.yml
@@ -9,6 +9,12 @@ jobs:
   generate:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout output branch
+        uses: actions/checkout@v4
+        with:
+          ref: output
+          fetch-depth: 0
+
       - name: Generate Snake SVG
         uses: Platane/snk@v3
         with:
@@ -16,9 +22,9 @@ jobs:
           outputs: |
             ./github-contribution-grid-snake.svg
             ./github-contribution-grid-snake-dark.svg?palette=github-dark
-      - name: Push Snake SVG to the output branch
+
+      - name: Commit and push snake
         uses: EndBug/add-and-commit@v9
         with:
-          branch: output
           message: 'Generate contribution snake'
           add: 'github-contribution-grid-snake*'
